<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/profile_back"
    tools:context="com.cheersondemand.view.fragments.FragmentCart">

    <TextView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:paddingTop="15dp"
        android:textStyle="bold"
        android:fontFamily="@font/sf_ui_display_regular"
        android:gravity="center|center_vertical"
        android:textColor="@color/profile_text_color"
        android:textSize="18sp"
        android:text="@string/my_cart" />

    <LinearLayout

        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:id="@+id/llNoProductInCount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/group_6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sf_ui_display_regular"
            android:gravity="center_horizontal"
            android:text="@string/no_product_found"
            android:textColor="@color/profile_text_color"
            android:textSize="16.3sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_display_regular"
            android:gravity="center_horizontal"

            android:text="@string/try_search_diff"
            android:textColor="@color/profile_updated_text_color"
            android:textSize="14.4sp" />


        <Button
            android:id="@+id/btnBrowseProduct"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_button_enable"
            android:fontFamily="@font/sf_ui_display_regular"
            android:text="@string/browse_product"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13.4sp" />
    </LinearLayout>
</LinearLayout>
