<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.cheersondemand.view.fragments.FragmentHome">


    <RelativeLayout
        android:id="@+id/rl"

        android:layout_width="match_parent"
        android:layout_height="170dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/top_banner" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_ui_display_regular"
                    android:text="@string/location"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_ui_display_regular"
                    android:text="@string/select_a_location"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_notification" />
            </RelativeLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingEnd="30dp"
            android:paddingStart="30dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/search_back"
                android:drawableLeft="@drawable/ic_search"
                android:drawablePadding="15dp"
                android:enabled="false"
                android:hint="@string/search_hint"
                android:paddingLeft="15dp"
                android:textColorHint="@color/hint_color"
                android:textSize="14.5sp" />
        </RelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_below="@id/rl"
        android:background="@color/brands_back_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvBrands"
            android:scrollbars="horizontal"
            android:background="@color/brands_back_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>
