<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/profile_back"
    tools:context="com.cheersondemand.view.fragments.FragmentProfile">


    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"></ScrollView>-->

    <LinearLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/sf_ui_display_regular"
            android:gravity="center_horizontal"
            android:textColor="@color/profile_text_color"
            android:textSize="18sp"
            android:text="@string/profile" />


            <LinearLayout
                android:id="@+id/llProfileView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/imgProfile"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerInParent="true"
                        android:scaleType="fitXY"
                        android:src="@drawable/edit_profile_back_default"
                        app:riv_border_color="@color/edit_button_back_color"
                        app:riv_border_width="1dip"
                        app:riv_corner_radius="5dip"
                        app:riv_mutate_background="true"
                        app:riv_oval="false" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_ui_display_regular"
                        android:text="Sahil Pandita"
                        android:textColor="@color/profile_text_color"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_ui_display_regular"
                        android:text="sahilhost0h@gmail.com"
                        android:textColor="@color/profile_email_color"
                        android:textSize="14.4sp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnEdit"
                        android:layout_width="65dp"
                        android:layout_height="30dp"
                        android:background="@drawable/edit_profile_back"
                        android:fontFamily="@font/sf_ui_display_regular"
                        android:text="@string/edit"
                        android:textAllCaps="false"
                        android:textColor="@color/edit_text_color"
                        android:textSize="14.4sp" />


                </RelativeLayout>
            </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/llWishList"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/wedding_planning" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/sf_ui_display_regular"
                android:paddingLeft="35dp"
                android:text="@string/wishList"
                android:textColor="@color/profile_item_text_color"
                android:textSize="14.4sp" />

            <TextView
                android:id="@+id/tvNumberWishListItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/wishlist_back"
                android:fontFamily="@font/sf_ui_display_regular"
                android:padding="7dp"
                android:layout_centerVertical="true"
                android:text="16"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/profile_back" />

        <RelativeLayout
            android:id="@+id/llOrders"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/package_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="35dp"
                android:fontFamily="@font/sf_ui_display_regular"
                android:text="@string/my_orders"
                android:textColor="@color/profile_item_text_color"
                android:textSize="14.4sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/profile_back" />

        <RelativeLayout
            android:id="@+id/llSavedAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/placeholder_8" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="35dp"
                android:fontFamily="@font/sf_ui_display_regular"
                android:text="@string/saved_add"
                android:textColor="@color/profile_item_text_color"
                android:textSize="14.4sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/profile_back" />

        <RelativeLayout
            android:id="@+id/llPaymentInfo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/credit_card_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="35dp"
                android:fontFamily="@font/sf_ui_display_regular"
                android:text="@string/payment_info"
                android:textColor="@color/profile_item_text_color"
                android:textSize="14.4sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/profile_back" />

        <RelativeLayout
            android:id="@+id/llConnectedAcc"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/broken_link" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="35dp"
                android:fontFamily="@font/sf_ui_display_regular"
                android:text="@string/conn_acc"
                android:textColor="@color/profile_item_text_color"
                android:textSize="14.4sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/profile_back" />

        <RelativeLayout
            android:id="@+id/llChangePassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/key_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="35dp"
                android:fontFamily="@font/sf_ui_display_regular"
                android:text="@string/change_password"
                android:textColor="@color/profile_item_text_color"
                android:textSize="14.4sp" />
        </RelativeLayout>

        <View
            android:id="@+id/viewChangePassword"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/profile_back" />

        <RelativeLayout
            android:id="@+id/llHelp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/box" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="35dp"
                android:fontFamily="@font/sf_ui_display_regular"
                android:text="@string/help_center"
                android:textColor="@color/profile_item_text_color"
                android:textSize="14.4sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/profile_back" />

        <RelativeLayout
            android:id="@+id/llNotification"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/notification_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="35dp"
                android:fontFamily="@font/sf_ui_display_regular"
                android:text="@string/notification"
                android:textColor="@color/profile_item_text_color"
                android:textSize="14.4sp" />

            <com.suke.widget.SwitchButton
                android:layout_alignParentRight="true"
                android:id="@+id/switch_button"
                app:sb_show_indicator="false"
                app:sb_checked="true"
                android:layout_centerVertical="true"
                android:layout_width="55dp"
                android:layout_height="35dp"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/profile_back" />

        <RelativeLayout
            android:id="@+id/llLogout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/logout_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="35dp"
                android:fontFamily="@font/sf_ui_display_regular"
                android:text="@string/logout"
                android:textColor="@color/profile_item_text_color"
                android:textSize="14.4sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/profile_back" />
    </LinearLayout>

</RelativeLayout>
